--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+
 body {
     margin: 0;
     padding: 0;
-    background-image: url('/src/assets/fondo.jpg');
+    /*background-image: url('/src/assets/fondo.jpg');*/
+    background-color: black;
     background-size: cover;
     background-position: center;
     min-height: 100vh;
